gitops/apps/envoy-gateway/templates/gateway-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway
  annotations:
    argocd.argoproj.io/sync-wave: "0"
